extend our hacks to work in online mode (!!)

--- a/client/jade/app.jade
+++ b/client/jade/app.jade
@@ -45,11 +45,12 @@ html(lang="en")
 						//- 	span.label.label-important ALPHA
 						//- 	| 
 						em.motto.hidden-phone(style="font-size: small")
-							if offline
-								| doing one thing and doing it without internet
-							else if development
-								| doing one thing and not necessarily doing it acceptably well quite yet
-							else
+							| doing one thing with the help of the QBReader API
+							//- if offline
+							//- 	| doing one thing and doing it without internet
+							//- else if development
+							//- 	| doing one thing and not necessarily doing it acceptably well quite yet
+							//- else
 								| doing one thing and doing it acceptably well
 					
 					div.mobile-brand
